# data

lake/: docker-compose.yml
scrape/: Dockerfile  pyproject.toml
scrapify/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  dockerfile  makefile  passenger_wsgi.py  pyproject.toml  requirements.txt
scrapify/src/: main.py  passenger_wsgi.py
scrapify/src/apps/core/: models.py
scrapify/src/apps/core/migrations/: 0001_initial.py  0002_source.py  0003_store.py  0004_language.py
scrapify/src/config/: __init__.py  settings.py
scrapy/: Dockerfile  pyproject.toml
